Fix margin spacing

--- a/_includes/styles.scss
+++ b/_includes/styles.scss
@@ -143,7 +143,7 @@ body > footer
 
     footer
     {
-        margin: 0 0 24px;
+        margin: 24px 0;
     }
 
     p
@@ -156,7 +156,7 @@ body > footer
 {
     aside
     {
-        margin: 16px 0 0;
+        margin: 16px 0;
     }
 
     header > h1
